# hse_applied_python

./: README.md  main.py  pyproject.toml
app/: main.py  temperature_data.csv
app/.streamlit/: config.toml
app/pages/: settings.py
notebooks/: .cache.sqlite  temperature_data.csv  time_series_analysis.ipynb
notebooks/.ipynb_checkpoints/: time_series_analysis-checkpoint.ipynb
